--- a/project Py_code.ipynb
+++ b/project Py_code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "id": "b13824f0",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "id": "146ac9d1",
    "metadata": {},
    "outputs": [
@@ -33,7 +33,7 @@
        "\"SELECT a.first_name || ' ' || a.last_name AS full_name, AVG(f.rental_rate) AS average_rental_rate \\n        FROM actor a \\n        LEFT JOIN film_actor fa ON a.actor_id = fa.actor_id \\n        LEFT JOIN film f ON fa.film_id = f.film_id \\n        GROUP BY full_name \\n        ORDER BY average_rental_rate DESC ;\""
       ]
      },
-     "execution_count": 3,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "297b49ac",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "5ebfda5b",
    "metadata": {},
    "outputs": [
@@ -180,7 +180,7 @@
        "[7275 rows x 3 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "91e139e5",
    "metadata": {},
    "outputs": [],
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "886a07ed",
    "metadata": {},
    "outputs": [],
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "0d1674db",
    "metadata": {},
    "outputs": [],
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "111bb8b9",
    "metadata": {},
    "outputs": [],
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "e6a0f968",
    "metadata": {},
    "outputs": [],
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "8a312f04",
    "metadata": {},
    "outputs": [],
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "cbe58b5b",
    "metadata": {},
    "outputs": [
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "b5b85bd7",
    "metadata": {},
    "outputs": [
@@ -295,7 +295,7 @@
        "'Select film_id, title, description from film;'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "dafe2979",
    "metadata": {},
    "outputs": [],
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "id": "13a09464",
    "metadata": {},
    "outputs": [
@@ -451,7 +451,7 @@
        "[1000 rows x 3 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "6c97e84d",
    "metadata": {},
    "outputs": [],
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "id": "e0d4ad38",
    "metadata": {},
    "outputs": [
@@ -505,7 +505,7 @@
        "Name: description, Length: 1000, dtype: object"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "id": "134d4d65",
    "metadata": {},
    "outputs": [],
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "id": "7fa26ce9",
    "metadata": {},
    "outputs": [],
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "id": "96710e1e",
    "metadata": {},
    "outputs": [
@@ -713,7 +713,7 @@
        "14  A Fanciful Saga of a Hunter And a Pastry Chef ...     mixed  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "id": "54d1818d",
    "metadata": {},
    "outputs": [],
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "id": "f3aba58e",
    "metadata": {},
    "outputs": [],
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "id": "3a354f57",
    "metadata": {},
    "outputs": [
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "id": "25696522",
    "metadata": {},
    "outputs": [
@@ -798,7 +798,7 @@
        "\"SELECT a.first_name || ' ' || a.last_name AS full_name, AVG(f.rental_rate) AS average_rental_rate \\n        FROM actor a \\n        LEFT JOIN film_actor fa ON a.actor_id = fa.actor_id \\n        LEFT JOIN film f ON fa.film_id = f.film_id \\n        GROUP BY full_name \\n        ORDER BY average_rental_rate DESC ;\""
       ]
      },
-     "execution_count": 24,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -816,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "id": "f28d1e2e",
    "metadata": {},
    "outputs": [
@@ -824,7 +824,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\welco\\AppData\\Local\\Temp\\ipykernel_4304\\539696491.py:1: UserWarning: Pandas doesn't allow columns to be created via a new attribute name - see https://pandas.pydata.org/pandas-docs/stable/indexing.html#attribute-access\n",
+      "C:\\Users\\welco\\AppData\\Local\\Temp\\ipykernel_4592\\539696491.py:1: UserWarning: Pandas doesn't allow columns to be created via a new attribute name - see https://pandas.pydata.org/pandas-docs/stable/indexing.html#attribute-access\n",
       "  df.average_rental_rate = pd.read_csv ('ques_4.csv')\n"
      ]
     }
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "id": "47e81545",
    "metadata": {},
    "outputs": [
@@ -933,7 +933,7 @@
        "9      Chris Bridges             3.582593"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -952,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 35,
    "id": "c1c40ef2",
    "metadata": {},
    "outputs": [
@@ -962,7 +962,7 @@
        "'SELECT  cy.country, \\n    SUM(p.amount) as sales_amount, \\n    DATE(p.payment_date) as payment_date \\n    FROM payment p \\n    LEFT JOIN customer c ON p.customer_id = c.customer_id \\n    LEFT JOIN address a ON a.address_id = c.address_id \\n    LEFT JOIN city ct ON ct.city_id = a.city_id \\n    LEFT JOIN country cy ON cy.country_id = ct.country_id \\n    GROUP BY cy.country, p.amount, DATE(p.payment_date) \\n    ORDER BY DATE(p.payment_date) ASC;'"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -984,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "id": "44308fb0",
    "metadata": {},
    "outputs": [
@@ -992,7 +992,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\welco\\AppData\\Local\\Temp\\ipykernel_4304\\163436117.py:1: UserWarning: Pandas doesn't allow columns to be created via a new attribute name - see https://pandas.pydata.org/pandas-docs/stable/indexing.html#attribute-access\n",
+      "C:\\Users\\welco\\AppData\\Local\\Temp\\ipykernel_4592\\163436117.py:1: UserWarning: Pandas doesn't allow columns to be created via a new attribute name - see https://pandas.pydata.org/pandas-docs/stable/indexing.html#attribute-access\n",
       "  df.sales_payment = pd.read_csv ('ques_5.csv')\n"
      ]
     }
@@ -1003,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 37,
    "id": "efce1477",
    "metadata": {},
    "outputs": [
@@ -1122,7 +1122,7 @@
        "[7275 rows x 3 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1133,7 +1133,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 88,
+   "id": "63ff7a46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "data = {\n",
+    "    'Country': ['United States', 'Canada', 'Germany', 'France', 'Brazil', 'China', 'India', 'Australia'],\n",
+    "    'Category': ['North America', 'North America', 'Europe', 'Europe', 'South America', 'Asia', 'Asia', 'Oceania']\n",
+    "}\n",
+    "\n",
+    "df_category = pd.DataFrame(data)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "6d58bef5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Category</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>United States</td>\n",
+       "      <td>North America</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Canada</td>\n",
+       "      <td>North America</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Germany</td>\n",
+       "      <td>Europe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>France</td>\n",
+       "      <td>Europe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>South America</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>China</td>\n",
+       "      <td>Asia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>India</td>\n",
+       "      <td>Asia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Australia</td>\n",
+       "      <td>Oceania</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Country       Category\n",
+       "0  United States  North America\n",
+       "1         Canada  North America\n",
+       "2        Germany         Europe\n",
+       "3         France         Europe\n",
+       "4         Brazil  South America\n",
+       "5          China           Asia\n",
+       "6          India           Asia\n",
+       "7      Australia        Oceania"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_category"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "id": "2da719ed",
    "metadata": {},
    "outputs": [],
@@ -1145,46 +1259,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 76,
    "id": "7ec7f73a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\welco\\AppData\\Local\\Temp\\ipykernel_4304\\849474496.py:1: UserWarning: Pandas doesn't allow columns to be created via a new attribute name - see https://pandas.pydata.org/pandas-docs/stable/indexing.html#attribute-access\n",
-      "  grouped_df.sales_payment = df.sales_payment.groupby('country')['sales_amount'].sum().reset_index()\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "grouped_df.sales_payment = df.sales_payment.groupby('country')['sales_amount'].sum().reset_index()"
+    "grouped_df.sales_payment = df.sales_payment.groupby('sales_amount')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 77,
    "id": "7d927ede",
    "metadata": {},
    "outputs": [],
    "source": [
-    "classification = grouped_df.sales_payment['sales_amount'].quantile(0.5)"
+    "classification = grouped_df.sales_payment"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 84,
    "id": "8a72fed4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1612096755.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[84], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    new_df = pd.DataFrame({'country': grouped_df['country'],'classified': grouped_df['sales_amount'] = classification})\u001b[0m\n\u001b[1;37m                                                                                                     ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "new_df = pd.DataFrame({'country': grouped_df['country'], 'top_5_percentile': grouped_df['sales_amount'] >= classification})"
+    "new_df = pd.DataFrame({'country': grouped_df['country'],'classified': grouped_df['sales_amount'] = classification})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 85,
    "id": "b893ae02",
    "metadata": {},
    "outputs": [
@@ -1210,7 +1324,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>country</th>\n",
-       "      <th>top_5_percentile</th>\n",
+       "      <th>classified</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1275,23 +1389,23 @@
        "</div>"
       ],
       "text/plain": [
-       "                  country  top_5_percentile\n",
-       "0             Afghanistan             False\n",
-       "1                 Algeria              True\n",
-       "2          American Samoa             False\n",
-       "3                  Angola             False\n",
-       "4                Anguilla             False\n",
-       "..                    ...               ...\n",
-       "103               Vietnam              True\n",
-       "104  Virgin Islands, U.S.             False\n",
-       "105                 Yemen              True\n",
-       "106            Yugoslavia              True\n",
-       "107                Zambia             False\n",
+       "                  country  classified\n",
+       "0             Afghanistan       False\n",
+       "1                 Algeria        True\n",
+       "2          American Samoa       False\n",
+       "3                  Angola       False\n",
+       "4                Anguilla       False\n",
+       "..                    ...         ...\n",
+       "103               Vietnam        True\n",
+       "104  Virgin Islands, U.S.       False\n",
+       "105                 Yemen        True\n",
+       "106            Yugoslavia        True\n",
+       "107                Zambia       False\n",
        "\n",
        "[108 rows x 2 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
